--- a/shared/vue虚拟dom转化为dom的过程.html
+++ b/shared/vue虚拟dom转化为dom的过程.html
@@ -4,12 +4,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>感谢大家的关注</title>
   <script src="./modules/vue.js"></script>
 </head>
 
 <body>
+  <div id="app">
+    <!-- <div id="content">
+      <p>姓名：{{name}}</p>
+      <p>性别：{{sex}}</p>
+    </div> -->
+  </div>
 
+  <script>
+    let vm = new Vue({
+      el: '#app', 
+      // template: `
+      // <div id="app">
+      //   <div id="content">
+      //     <p>姓名：{{name}}</p>
+      //     <p>性别：{{sex}}</p>
+      //   </div>
+      // </div>
+      // `,
+      data: () => ({
+        name: 'singerle',
+        sex: '中'
+      }),
+      render(h){
+        // h 元素，元素的属性，元素的内容
+        return h('div',{attrs:{
+          id:'app',
+
+        }},[
+          h('div',{attrs:{
+            id:'content'
+          }},[h('p',{},`姓名：${this.name}`),h('p',{},`性别：${this.sex}`)]),])
+      }
+    })
+  </script>
 </body>
 
 </html>
