--- a/dev/test.html
+++ b/dev/test.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>感谢关注、三连</title>
-    <script src="./扁平数组转树（递归版）.js"></script>
+    <script src="../shared/理解js的变量提升.js"></script>
 </head>
 <body>
     <p>感谢大家的观看和支持。</p>
